first user control

--- a/Magdy Trial 7/logic1/logic1/logic1.csproj
+++ b/Magdy Trial 7/logic1/logic1/logic1.csproj
@@ -50,10 +50,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gates interface.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Gates interface.Designer.cs">
+      <DependentUpon>Gates interface.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gates interface.resx">
+      <DependentUpon>Gates interface.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
